--- a/darwin_world/src/main/resources/simulation.fxml
+++ b/darwin_world/src/main/resources/simulation.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="400.0" minWidth="400.0"
@@ -9,4 +11,10 @@
         <GridPane fx:id="mapGrid" gridLinesVisible="true"
                   alignment="CENTER"/>
     </center>
+    <bottom>
+        <GridPane hgap="10" vgap="10">
+            <Button text="Pause" onAction="#onPause" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <Button text="Unpause" onAction="#onUnpause" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        </GridPane>
+    </bottom>
 </BorderPane>
