added visualizations of animal statistics, fixed possible thread issues

--- a/darwin_world/src/main/resources/simulation.fxml
+++ b/darwin_world/src/main/resources/simulation.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.Label?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="400.0" minWidth="400.0"
@@ -15,6 +16,65 @@
         <GridPane hgap="10" vgap="10">
             <Button text="Pause" onAction="#onPause" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
             <Button text="Unpause" onAction="#onUnpause" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Button text="Highlight most popular genotype" onAction="#onHighlightMostPopularGenotype" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <Button text="Highlight plants preferred region" onAction="#onHighlightPlantsPreferredRegion" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+
         </GridPane>
     </bottom>
+
+    <left>
+        <GridPane hgap="10" vgap="10">
+            <Label text="Number of alive animals:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <Label fx:id="numberOfAnimals" text="-" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+
+            <Label text="Number of plants:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+            <Label fx:id="numberOfPlants" text="-" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+
+            <Label text="Number of free cells:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+            <Label fx:id="numberOfFreeCells" text="-" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+
+            <Label text="Most popular genotype:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+            <Label fx:id="mostPopularGenotype" text="-" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+
+            <Label text="Average animal energy:" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+            <Label fx:id="averageEnergy" text="-" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+
+            <Label text="Average animal lifespan:" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+            <Label fx:id="averageLifespan" text="-" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+
+            <Label text="Average children count:" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+            <Label fx:id="averageChildrenCount" text="-" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+
+        </GridPane>
+    </left>
+
+    <right>
+        <GridPane hgap="10" vgap="10">
+            <Label text="Genotype:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <Label fx:id="genotype" text="-" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+
+            <Label text="Next move:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+            <Label fx:id="nextMove" text="-" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+
+            <Label text="Energy:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+            <Label fx:id="energy" text="-" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+
+            <Label text="Plants consumed:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+            <Label fx:id="plantsConsumed" text="-" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+
+            <Label text="Number of children:" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+            <Label fx:id="numberOfChildren" text="-" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+
+            <Label text="Number of descendants:" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+            <Label fx:id="numberOfDescendants" text="-" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+
+            <Label text="Days alive:" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+            <Label fx:id="daysAlive" text="-" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+
+            <Label text="Death day:" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
+            <Label fx:id="deathDay" text="-" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+
+        </GridPane>
+    </right>
+
 </BorderPane>
