--- a/darwin_world/src/main/resources/simulation.fxml
+++ b/darwin_world/src/main/resources/simulation.fxml
@@ -68,7 +68,7 @@
             <Label text="Number of descendants:" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
             <Label fx:id="numberOfDescendants" text="-" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
 
-            <Label text="Days alive:" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+            <Label text="Birth day:" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
             <Label fx:id="daysAlive" text="-" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
 
             <Label text="Death day:" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
